Buttons in slider 2

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           <div class="single-slide" id="slide-2"></div>
           <div class="single-slide" id="slide-3"></div>
         </div>
-        <div class="main-model1">
-            <span class="span-model1">Soundnext</span>
+        <div class="model1-info">
+            <span class="span-model">Soundnext</span>
             <div class="text-model1">
               <img class="logo-model1" src="assets/logotype.png" alt="Sound Next"/>
               <div class="btns">
@@ -49,6 +49,19 @@
         </div>
       </section>
       <section class="model-2">
+        <span class="span-model">Soundnext</span>
+
+        <div class="model-2-info">
+          <h2>Welcome to Sound Next</h2>
+          <div class="new-way">
+            <img src="assets/add.png" alt="Plus">
+            <div class="text">
+              <h3 class="new-way-h3">There is a <b>new way</b> to learn music</h3>
+              <p class="new-way-p">Lorem ipsum dolor si atum laborum soluta harum deserunt nostrum eos velit aspernatur natus quidem, culpa expedita vel.
+              </p>
+            </div>
+          </div>
+        </div>
         <div class="slider">
           <div class="big-slider">
              <img class="slider-img" src="assets/img-slider-1.png" alt="">
