slider 2 with lines and body with overflow hidden

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
              <img class="slider-img" src="assets/img-slider-2.png" alt="">
              <img class="slider-img"src="assets/img-slider-3.png" alt="">
           </div>
-          <ul class="slider-points">
-              <li class="slider-point active"></li>
-              <li class="slider-point"></li>
-              <li class="slider-point"></li>
+          <ul class="slider-lines">
+              <li class="slider-line active"></li>
+              <li class="slider-line"></li>
+              <li class="slider-line"></li>
           </ul>
         </div>        
       </section>
