Lucas Vidal Section withouth effects

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"/>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" href="https://www.soundnext.com/images/favicon/favicon-32x32.png" sizes="32x32">
-
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" defer></script>
     <script src="js/app.js" defer></script>
   </head>
@@ -50,7 +49,6 @@
       </section>
       <section class="model-2">
         <span class="span-model">Soundnext</span>
-
         <div class="model-2-info">
           <h2>Welcome to Sound Next</h2>
           <div class="new-way">
@@ -80,7 +78,7 @@
           <nav>
             <ul>
               <li>
-                <img src="assets/our-partners.png" alt="Our partners"/>
+                <p>Our partners</p>
               </li>
               <li>
                 <img src="assets/steinberg.png" alt="steinberg"/>
@@ -89,23 +87,65 @@
                 <img src="assets/yamaha.png" alt="Yamaha"/>
               </li>
               <li>
-                <img src="assets/abe.png" alt="Ableton"/>
+                <img src="assets/ableton.png" alt="Ableton"/>
               </li>
               <li>
                 <img src="assets/output.png" alt="Output"/>
               </li>
               <li>
-                <img src="assets/spitrife.png" alt="Spitrife"/>
+                <img src="assets/spitfireaudio.png" alt="Spitrife"/>
               </li>
               <li>
-                <img src="assets/partner4.png" alt="Native Instruments"/>
+                <img src="assets/native-instruments.png" alt="Native Instruments"/>
               </li>
 
             </ul>
           </nav>
         </div>
       </section>
+      <section class="model-4">
+        <div class="wrapper">
+          <div class="wrapper-one">
+            <img src="assets/playout.png" alt="playout"/>
+            <div class="artist-info">
+              <img class="artist-sound" src="assets/logo-blue.png" alt="logotype sound next"/>
+              <p class="artist-p">Exclusive Masterclass</p>
+              <h2 class="artist-h2">Lucas Vidal</h2>
+              <p class="artist-film">Film Scoring</p>
+              <p class="artist-p">Discover it <u>here</u></p>
+            </div>
+          </div>
+          <div class="wrapper-two">
+            <img src="assets/Lucas.jpg" alt="Lucas Vidal"/>
+          </div>
+          <div class="wrapper-three">
+            <img src="assets/Fast-furious2.jpg" alt="Lucas Vidal"/>
+          </div>
+          <div class="wrapper-four">
+            <img src="assets/Raven.jpg" alt="Raven">
+          </div>
+        </div>
+      </section>
       
     </main>
+    <footer class="footer">
+      <div class="centered">
+        <img class="footer-logo" src="assets/logo-mini.png" alt="Sound Next Footer">
+        <p class="footer-p">Copyright sound next 2018</p>
+        <p class="footer-p web">Web design by Charlienumberfive.co</p>
+        <span class="footer-span">For Any Enquirees Please contact at info@soundnext.com</span>
+        <nav>
+          <ul class="footer-ul">
+            <li class="footer-li"><a href="#">Contact</a></li>
+            <li class="footer-li"><a href="#">Legal notice</a></li>
+            <li class="footer-li"><a href="#">Cookie Policy</a></li>
+            <li class="footer-li"><a href="#">Privacy Policy</a></li>
+            <li class="footer-li"><a href="#">Gurantee</a></li>
+            <li class="footer-li"><a href="#">Support</a></li>
+            <li class="footer-li"><a href="#">Terms and Conditions</a></li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
   </body>
 </html>
