Social network with icon

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="model1-info">
             <span class="span-model">Soundnext</span>
             <div class="text-model1">
-              <img class="logo-model1" src="assets/logotype.png" alt="Sound Next"/>
+              <img class="logo-model1" src="assets/logo-model-1.png" alt="Sound Next"/>
               <div class="btns">
                 <a href="#" class="btn-new">A new way to learn music</a>
                 <a href="#" class="btn-scroll">Scroll down to discover more_</a>
@@ -116,17 +116,36 @@
             </div>
           </div>
           <div class="wrapper-two">
-            <img src="assets/Lucas.jpg" alt="Lucas Vidal"/>
+            <img src="assets/lucas.png" alt="Lucas Vidal"/>
           </div>
           <div class="wrapper-three">
-            <img src="assets/Fast-furious2.jpg" alt="Lucas Vidal"/>
+            <img src="assets/fast-furious.png" alt="Lucas Vidal"/>
           </div>
           <div class="wrapper-four">
-            <img src="assets/Raven.jpg" alt="Raven">
+            <img src="assets/raven.png" alt="Raven">
           </div>
         </div>
       </section>
-      
+      <section class="model-5">
+        <div class="centered">  
+          <h4 class="social-h3"> <b>Social</b> Networks</h4>  
+          <div class="social-gallery">
+            <article>
+              <img src="assets/Foto2.jpg" alt=""/>
+              <i class="social-icon fab fa-twitter"></i>
+            </article>
+            <article>
+              <img src="assets/Foto3.jpg" alt=""/>
+              <i class="social-icon fab fa-facebook-f"></i>
+            </article>
+            <article>
+              <img src="assets/Foto4.jpg" alt=""/>
+              <i class="social-icon fab fa-instagram"></i>         
+            </article>
+          </div>
+          
+      </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="centered">
