Include elements and margins with icons in Section 4 and 5

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
               <h2 class="artist-h2">Lucas Vidal</h2>
               <p class="artist-film">Film Scoring</p>
               <p class="artist-p">Discover it <u>here</u></p>
+              <img class="artist-plus" src="assets/add.png" alt=Ssymbol add">
             </div>
           </div>
           <div class="wrapper-two">
@@ -131,19 +132,18 @@
           <h4 class="social-h3"> <b>Social</b> Networks</h4>  
           <div class="social-gallery">
             <article>
-              <img src="assets/Foto2.jpg" alt=""/>
+              <img src="assets/twitter.jpg" alt="loudspeaker"/>
               <i class="social-icon fab fa-twitter"></i>
             </article>
             <article>
-              <img src="assets/Foto3.jpg" alt=""/>
+              <img src="assets/facebook.jpg" alt="person"/>
               <i class="social-icon fab fa-facebook-f"></i>
             </article>
             <article>
-              <img src="assets/Foto4.jpg" alt=""/>
+              <img src="assets/instagram.jpg" alt="guitar"/>
               <i class="social-icon fab fa-instagram"></i>         
             </article>
           </div>
-          
       </div>
       </section>
     </main>
