Model 1 with animations

--- a/index.html
+++ b/index.html
@@ -37,12 +37,11 @@
           <div class="single-slide" id="slide-3"></div>
         </div>
         <div class="model1-info">
-            <span class="span-model">Soundnext</span>
             <div class="text-model1">
-              <img class="logo-model1" src="assets/logo-model-1.png" alt="Sound Next"/>
+              <img class="logo-model1 parallax1" src="assets/logo-model-1.png" alt="Sound Next"/>
               <div class="btns">
                 <a href="#" class="btn-new">A new way to learn music</a>
-                <a href="#" class="btn-scroll">Scroll down to discover more_</a>
+                <a href="#" class="btn-scroll parallax2">Scroll down to discover more_</a>
               </div>
             </div>
         </div>
@@ -62,14 +61,14 @@
         </div>
         <div class="slider">
           <div class="big-slider">
-             <img class="slider-img" src="assets/img-slider-1.png" alt="">
-             <img class="slider-img" src="assets/img-slider-2.png" alt="">
-             <img class="slider-img"src="assets/img-slider-3.png" alt="">
+             <img class="slider-img" src="assets/img-slider-1.png" alt="DJ">
+             <img class="slider-img" src="assets/img-slider-2.png" alt="Girl">
+             <img class="slider-img"src="assets/img-slider-3.png" alt="Concert">
           </div>
           <ul class="slider-lines">
-              <li class="slider-line active"></li>
-              <li class="slider-line"></li>
-              <li class="slider-line"></li>
+            <li class="slider-line active"></li>
+            <li class="slider-line"></li>
+            <li class="slider-line"></li>
           </ul>
         </div>        
       </section>
