Btn-new, model 1 - animation with  js

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="model-2-info">
           <h2>Welcome to Sound Next</h2>
           <div class="new-way">
-            <img src="assets/add.png" alt="Plus">
+            <img class="add-symbol" src="assets/add.png" alt="Plus">
             <div class="text">
               <h3 class="new-way-h3">There is a <b>new way</b> to learn music</h3>
               <p class="new-way-p">Lorem ipsum dolor si atum laborum soluta harum deserunt nostrum eos velit aspernatur natus quidem, culpa expedita vel.
@@ -105,7 +105,7 @@
       <section class="model-4">
         <div class="wrapper">
           <div class="wrapper-one">
-            <img src="assets/playout.png" alt="playout"/>
+            <img src="assets/playout.png" alt="playout" class="playout"/>
             <div class="artist-info">
               <img class="artist-sound" src="assets/logo-blue.png" alt="logotype sound next"/>
               <p class="artist-p">Exclusive Masterclass</p>
