Module 1, resize the nav and further adapt to the submitted model Model 2, Create double line in slider 2

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <body class="index">
     <main class="main">  
       <section class="model-1">
-        <nav class="nav-left">
-          <ul>
+        <nav class="nav-left parallax3">
+          <ul class="parallax3">
             <li>Musical production for the digital age</li>
             <li>Mastering</li>
           </ul>
         </nav>
         <nav class="nav-right">
-          <ul>
+          <ul class="parallax3">
             <li>Production</li>
             <li>Composing for film</li>
             <li>The art of music</li>
@@ -70,6 +70,11 @@
             <li class="slider-line"></li>
             <li class="slider-line"></li>
           </ul>
+          <ul class="lines-ul">
+            <li class="line-opa active"></li>
+            <li class="line-opa"></li>
+            <li class="line-opa"></li>
+          </ul>
         </div>        
       </section>
       <section class="model-3">
@@ -91,13 +96,12 @@
               <li>
                 <img src="assets/output.png" alt="Output"/>
               </li>
-              <li>
+              <li class="partners-medium">
                 <img src="assets/spitfireaudio.png" alt="Spitrife"/>
               </li>
-              <li>
+              <li class="partners-medium">
                 <img src="assets/native-instruments.png" alt="Native Instruments"/>
               </li>
-
             </ul>
           </nav>
         </div>
