Model 1 - Slider 1 - background-img

--- a/index.html
+++ b/index.html
@@ -124,9 +124,11 @@
           </div>
           <div class="wrapper-three">
             <img src="assets/fast-furious.png" alt="Lucas Vidal"/>
+            <div class="overlay"></div>
           </div>
           <div class="wrapper-four">
             <img src="assets/raven.png" alt="Raven">
+            <div class="overlay"></div>
           </div>
         </div>
       </section>
