Responsive ipad and galaxy 5 except lines

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sound Next</title>
+    <title>SOUND NEXT</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -61,9 +61,9 @@
         </div>
         <div class="slider">
           <div class="big-slider">
-             <img class="slider-img" src="assets/img-slider-1.png" alt="DJ">
-             <img class="slider-img" src="assets/img-slider-2.png" alt="Girl">
-             <img class="slider-img"src="assets/img-slider-3.png" alt="Concert">
+             <img class="slider-img" src="assets/img-slider2-1.png" alt="DJ">
+             <img class="slider-img" src="assets/img-slider2-2.png" alt="Girl">
+             <img class="slider-img"src="assets/img-slider2-3.png" alt="Concert">
           </div>
           <ul class="slider-lines">
             <li class="slider-line active"></li>
@@ -121,14 +121,19 @@
           </div>
           <div class="wrapper-two">
             <img src="assets/lucas.png" alt="Lucas Vidal"/>
+            <div class="overlay"></div>
           </div>
           <div class="wrapper-three">
             <img src="assets/fast-furious.png" alt="Lucas Vidal"/>
-            <div class="overlay"></div>
+            <div class="overlay">
+              <img src="assets/tracers.png" alt=""/>
+            </div>
           </div>
           <div class="wrapper-four">
             <img src="assets/raven.png" alt="Raven">
-            <div class="overlay"></div>
+            <div class="overlay">
+              <img src="assets/paradise.png" alt=""/>
+            </div>
           </div>
         </div>
       </section>
@@ -137,15 +142,15 @@
           <h4 class="social-h3"> <b>Social</b> Networks</h4>  
           <div class="social-gallery">
             <article>
-              <img src="assets/twitter.jpg" alt="loudspeaker"/>
+              <img src="assets/rrss-twitter.png" alt="loudspeaker"/>
               <i class="social-icon fab fa-twitter"></i>
             </article>
             <article>
-              <img src="assets/facebook.jpg" alt="person"/>
+              <img src="assets/rrss-facebook.png" alt="person"/>
               <i class="social-icon fab fa-facebook-f"></i>
             </article>
             <article>
-              <img src="assets/instagram.jpg" alt="guitar"/>
+              <img src="assets/rrss-instagram.png" alt="guitar"/>
               <i class="social-icon fab fa-instagram"></i>         
             </article>
           </div>
