Review of the effects and resposinve.

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
   <body class="index">
     <main class="main">  
       <section class="model-1">
-        <nav class="nav-left parallax3">
+        <div class="aside-left parallax3">
           <ul class="parallax3">
             <li>Musical production for the digital age</li>
             <li>Mastering</li>
           </ul>
-        </nav>
-        <nav class="nav-right">
+        </div>
+        <div class="aside-right">
           <ul class="parallax3">
             <li>Production</li>
             <li>Composing for film</li>
             <li>The art of music</li>
           </ul>
-        </nav>
+        </div>
         <div class="slider-container">
           <div class="single-slide" id="slide-1"></div>
           <div class="single-slide" id="slide-2"></div>
@@ -41,19 +41,19 @@
               <img class="logo-model1 parallax1" src="assets/logo-model-1.png" alt="Sound Next"/>
               <div class="btns">
                 <a href="#" class="btn-new">A new way to learn music</a>
-                <a href="#" class="btn-scroll parallax2">Scroll down to discover more_</a>
               </div>
+              <a href="#" class="btn-scroll parallax2">Scroll down to discover more_</a>
             </div>
         </div>
       </section>
       <section class="model-2">
-        <span class="span-model">Soundnext</span>
+        <h1 class="span-model">Soundnext</h1>
         <div class="model-2-info">
-          <h2>Welcome to Sound Next</h2>
+          <h3>Welcome to Sound Next</h3>
           <div class="new-way">
-            <img class="add-symbol" src="assets/add.png" alt="Plus">
+            <img class="add-symbol" src="assets/add.png" alt="More">
             <div class="text">
-              <h3 class="new-way-h3">There is a <b>new way</b> to learn music</h3>
+              <h4 class="new-way-h4">There is a <b>new way</b> to learn music</h4>
               <p class="new-way-p">Lorem ipsum dolor si atum laborum soluta harum deserunt nostrum eos velit aspernatur natus quidem, culpa expedita vel.
               </p>
             </div>
@@ -61,19 +61,25 @@
         </div>
         <div class="slider">
           <div class="big-slider">
-             <img class="slider-img" src="assets/img-slider2-1.png" alt="DJ">
-             <img class="slider-img" src="assets/img-slider2-2.png" alt="Girl">
-             <img class="slider-img"src="assets/img-slider2-3.png" alt="Concert">
+             <img class="slider-img" src="assets/img-slider2-1.png" alt="DJ"/>
+             <img class="slider-img" src="assets/img-slider2-2.png" alt="Girl"/>
+             <img class="slider-img"src="assets/img-slider2-3.png" alt="Concert"/>
           </div>
-          <ul class="slider-lines">
-            <li class="slider-line active"></li>
-            <li class="slider-line"></li>
-            <li class="slider-line"></li>
-          </ul>
           <ul class="lines-ul">
             <li class="line-opa active"></li>
             <li class="line-opa"></li>
             <li class="line-opa"></li>
+          </ul>
+          <ul class="slider-lines">
+            <li class="box-line active">
+              <div class="slider-line"></div>
+            </li>
+            <li class="box-line">
+              <div class="slider-line"></div>
+            </li>
+            <li class="box-line">
+              <div class="slider-line"></div>
+            </li>
           </ul>
         </div>        
       </section>
@@ -116,7 +122,7 @@
               <h2 class="artist-h2">Lucas Vidal</h2>
               <p class="artist-film">Film Scoring</p>
               <p class="artist-p">Discover it <u>here</u></p>
-              <img class="artist-plus" src="assets/add.png" alt=Ssymbol add">
+              <img class="artist-plus" src="assets/add.png" alt="Symbol add"/>
             </div>
           </div>
           <div class="wrapper-two">
@@ -124,15 +130,15 @@
             <div class="overlay"></div>
           </div>
           <div class="wrapper-three">
-            <img src="assets/fast-furious.png" alt="Lucas Vidal"/>
+            <img src="assets/fast-furious.png" alt="Fast and Furious"/>
             <div class="overlay">
-              <img src="assets/tracers.png" alt=""/>
+              <img src="assets/tracers.png" alt="Tracers"/>
             </div>
           </div>
           <div class="wrapper-four">
             <img src="assets/raven.png" alt="Raven">
             <div class="overlay">
-              <img src="assets/paradise.png" alt=""/>
+              <img src="assets/paradise.png" alt="Paradise"/>
             </div>
           </div>
         </div>
@@ -143,15 +149,15 @@
           <div class="social-gallery">
             <article>
               <img src="assets/rrss-twitter.png" alt="loudspeaker"/>
-              <i class="social-icon fab fa-twitter"></i>
+              <a href="#"><i class="social-icon fab fa-twitter"></i></a>
             </article>
             <article>
               <img src="assets/rrss-facebook.png" alt="person"/>
-              <i class="social-icon fab fa-facebook-f"></i>
+              <a href="#"><i class="social-icon fab fa-facebook-f"></i></a>
             </article>
             <article>
               <img src="assets/rrss-instagram.png" alt="guitar"/>
-              <i class="social-icon fab fa-instagram"></i>         
+              <a href="#"><i class="social-icon fab fa-instagram"></i></a>
             </article>
           </div>
       </div>
@@ -162,7 +168,7 @@
         <img class="footer-logo" src="assets/logo-mini.png" alt="Sound Next Footer">
         <p class="footer-p">Copyright sound next 2018</p>
         <p class="footer-p web">Web design by Charlienumberfive.co</p>
-        <span class="footer-span">For Any Enquirees Please contact at info@soundnext.com</span>
+        <p class="footer-span">For Any Enquirees Please contact at  <a class="footer-email" href="mailto:info@soundnext.com">info@soundnext.com</a></p>
         <nav>
           <ul class="footer-ul">
             <li class="footer-li"><a href="#">Contact</a></li>
